picture has been fixed

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1> about the dog</h1>
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure dicta voluptate ut nemo ab, at, tempora corrupti vitae illo ex libero rem eveniet obcaecati perferendis fugiat ducimus ipsum accusamus dolorum?</p>
-    <a href="help.html">home a jaw</a>
-    <img src="../my-first-website/images/grandma.jpg" alt="a grandma picture">
+    <a href="helpdesk.html">home a jaw</a>
+    <img src="grandma.jpg" alt="a grandma picture">
     
 </body>
 </html>
