--- a/helpdesk.html
+++ b/helpdesk.html
@@ -9,6 +9,6 @@
     <h1>servive center</h1>
   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus aperiam odio adipisci maxime quo provident iusto voluptas dolore inventore obcaecati! Perspiciatis tenetur harum expedita. Voluptatum totam eos tempora nihil laudantium!</p>  
   <a href="index.html">call me</a>
-  <img src="../my-first-website/images/dog.jpg" alt="a dog">
+  <img width="250px" src="images/dog.jpg" alt="a dog">
 </body>
 </html>
